feat: change to supabase

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DATABASE_URL=
-NUXT_OAUTH_GITHUB_CLIENT_ID=
-NUXT_OAUTH_GITHUB_CLIENT_SECRET=
-NUXT_SESSION_PASSWORD=
+SUPABASE_URL=
+SUPABASE_KEY=
+SUPABASE_SECRET_KEY=
+SUPABASE_AUTH_EXTERNAL_GITHUB_CLIENT_ID=
+SUPABASE_AUTH_EXTERNAL_GITHUB_SECRET=
