--- a/package.json
+++ b/package.json
@@ -6,22 +6,20 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "postinstall": "nuxt prepare",
-    "db:generate": "nuxt db generate",
-    "db:migrate": "nuxt db migrate"
+    "supabase:start": "supabase start",
+    "supabase:gen": "supabase gen types --lang=typescript --local > app/types/database.types.ts"
   },
   "dependencies": {
-    "@electric-sql/pglite": "^0.3.15",
     "@nuxt/ui": "4.4.0",
-    "@nuxthub/core": "^0.10.5",
+    "@nuxtjs/supabase": "2.0.3",
     "@opencode-ai/sdk": "^1.1.36",
-    "drizzle-kit": "^0.31.8",
-    "drizzle-orm": "^0.45.1",
     "nuxt": "^4.2.2",
-    "nuxt-auth-utils": "^0.5.27",
-    "postgres": "^3.4.8",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "supabase": "^2.72.8"
   }
 }
