--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@electric-sql/pglite": "^0.3.15",
     "@nuxt/ui": "4.4.0",
     "@nuxthub/core": "^0.10.5",
-    "@opencode-ai/sdk": "^1.1.36",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
+    "node-cron": "^4.2.1",
     "nuxt": "^4.2.2",
     "nuxt-auth-utils": "^0.5.27",
     "postgres": "^3.4.8",
