--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 DATABASE_URL=
 NUXT_OAUTH_GITHUB_CLIENT_ID=
 NUXT_OAUTH_GITHUB_CLIENT_SECRET=
-NUXT_SESSION_PASSWORD=
+NUXT_SESSION_PASSWORD=password-with-at-least-32-characters
