--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@nuxthub/core": "^0.10.5",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
+    "monaco-editor": "^0.55.1",
     "node-cron": "^4.2.1",
     "nuxt": "^4.2.2",
     "nuxt-auth-utils": "^0.5.27",
+    "nuxt-monaco-editor": "1.4.0",
     "postgres": "^3.4.8",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
