feat: add timer display

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL=
 NUXT_OAUTH_GITHUB_CLIENT_ID=
 NUXT_OAUTH_GITHUB_CLIENT_SECRET=
+NUXT_OAUTH_GITHUB_REDRECT_URI=http://localhost:3000/api/auth/github
 NUXT_SESSION_PASSWORD=password-with-at-least-32-characters
