feat: generate api

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ NUXT_OAUTH_GITHUB_CLIENT_ID=
 NUXT_OAUTH_GITHUB_CLIENT_SECRET=
 NUXT_OAUTH_GITHUB_REDRECT_URI=http://localhost:3000/api/auth/github
 NUXT_SESSION_PASSWORD=password-with-at-least-32-characters
+OPENAI_API_KEY=
+OPENAI_BASE_URL=
+OPENAI_MODEL=
