--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   "dependencies": {
     "@electric-sql/pglite": "^0.3.15",
     "@nuxt/ui": "4.4.0",
-    "@nuxthub/core": "^0.10.5",
-    "drizzle-kit": "^0.31.8",
+    "@nuxthub/core": "^0.10.6",
+    "drizzle-kit": "^0.31.9",
     "drizzle-orm": "^0.45.1",
+    "ioredis": "^5.9.2",
     "monaco-editor": "^0.55.1",
     "node-cron": "^4.2.1",
-    "nuxt": "^4.2.2",
-    "nuxt-auth-utils": "^0.5.27",
+    "nuxt": "^4.3.1",
+    "nuxt-auth-utils": "^0.5.28",
     "nuxt-monaco-editor": "1.4.0",
     "postgres": "^3.4.8",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
-    "vue": "^3.5.27",
-    "vue-router": "^4.6.4",
+    "vue": "^3.5.28",
+    "vue-router": "^5.0.2",
     "xsai": "^0.4.3",
     "zod": "^4.3.6"
   }
