feat: use cronjob to schedule generate task

--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   },
   "dependencies": {
     "@electric-sql/pglite": "^0.3.15",
-    "@nuxt/ui": "4.4.0",
+    "@nuxt/ui": "^4.4.0",
     "@nuxthub/core": "^0.10.6",
+    "cron": "^4.4.0",
     "drizzle-kit": "^0.31.9",
     "drizzle-orm": "^0.45.1",
-    "ioredis": "^5.9.2",
     "monaco-editor": "^0.55.1",
-    "node-cron": "^4.2.1",
     "nuxt": "^4.3.1",
     "nuxt-auth-utils": "^0.5.28",
-    "nuxt-monaco-editor": "1.4.0",
+    "nuxt-monaco-editor": "^1.4.0",
     "postgres": "^3.4.8",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
