--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@electric-sql/pglite": "^0.3.15",
     "@nuxt/ui": "^4.4.0",
     "@nuxthub/core": "^0.10.6",
+    "@nuxtjs/mdc": "0.20.1",
     "cron": "^4.4.0",
     "drizzle-kit": "^0.31.9",
     "drizzle-orm": "^0.45.1",
